--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 14090",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "next": "latest",
+        "react": "18.1.0",
+        "react-dom": "18.1.0"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.35",
+        "@types/react": "18.0.9",
+        "@types/react-dom": "18.0.5",
+        "autoprefixer": "^10.4.7",
+        "eslint": "8.26.0",
+        "eslint-config-next": "12.3.1",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.2",
+        "typescript": "4.7.2"
+    }
 }
